# multi-inventory-system

./: .gitignore  LICENSE  README.md  create-asso.sh  delete-asso.sh  inventree-settings.conf
plugins/inventree-emails/: README.md  pyproject.toml
plugins/inventree-emails/inventree_emails/: __init__.py  api.py  apps.py  core.py
plugins/inventree-emails/inventree_emails/locale/fr/LC_MESSAGES/: django.mo  django.po
plugins/inventree-emails/inventree_emails/templates/InvenTree/: user_simple_login.html  user_simple_login.txt
plugins/inventree-emails/inventree_emails/templates/account/email/: _account_base.html  _code_base.html  account_already_exists_message.html  account_already_exists_message.txt  base_message.txt  base_notification.html  base_notification.txt  email_changed_message.html  email_changed_message.txt  email_confirm_message.html  email_confirm_message.txt  email_confirmation_message.html  email_confirmation_message.txt  email_deleted_message.html  email_deleted_message.txt  login_code_message.html  login_code_message.txt  password_changed_message.html  password_changed_message.txt  password_reset_code_message.html  (+9 more)
plugins/inventree-emails/inventree_emails/templates/email/: _order_base.html  build_order_completed.html  build_order_required_stock.html  canceled_order_assigned.html  email.html  low_stock_notification.html  new_order_assigned.html  overdue_build_order.html  overdue_purchase_order.html  overdue_return_order.html  overdue_sales_order.html  part_event_notification.html  purchase_order_received.html  return_order_received.html  stale_stock_notification.html  test_email.html
plugins/inventree-prets/: LICENSE  README.md  pyproject.toml
plugins/inventree-prets/inventree_prets/: __init__.py  admin.py  api.py  apps.py  core.py  models.py
plugins/inventree-prets/inventree_prets/migrations/: 0001_initial.py  0002_loan_stock_status_before.py  0003_i18n_verbose_names.py  0004_reservation.py  0005_on_behalf.py  0006_start_notified.py  0007_cancel_and_return_audit.py  0008_confirm_reminder_sent.py
plugins/inventree-prets/inventree_prets/static/: prets_dashboard.js  prets_panel.js
(+45 files in other folders)
